# granja_bot

./: Cargo.toml  Dockerfile
src/: action.rs  bar.html  bot.rs  main.rs  web.rs
src/model/: experience.rs  mod.rs
